force-app/main/default/objects/FSM_MeasuringPoint__c/FSM_MeasuringPoint__c.object-meta.xml
<CustomObject>
    <description>Crated as part of user story #SFS-32.
Updated as part of SFI-669.</description>
    <label>Measuring Point</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Measuring Point Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measuring Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>