force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_CodeGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_CodeGroup__c</fullName>
    <description>SFI-669
Data type changed from Text to Picklist as part of SFS-3011</description>
    <label>Code Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>40</fullName>
                <isActive>false</isActive>
                <label>40</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>