force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_CounterBased__c.field-meta.xml
<CustomField>
    <fullName>FSM_CounterBased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-669</description>
    <label>Counter Based</label>
    <type>Checkbox</type>
</CustomField>