force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_CurrentReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_CurrentReading__c</fullName>
    <label>Current Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>