force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_Decimals__c.field-meta.xml
<CustomField>
    <fullName>FSM_Decimals__c</fullName>
    <description>Created as part of SFI-1787</description>
    <label>Decimals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>