force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_Description__c.field-meta.xml
<CustomField>
    <fullName>FSM_Description__c</fullName>
    <description>SFI-669</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>