force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_LowerRange__c.field-meta.xml
<CustomField>
    <fullName>FSM_LowerRange__c</fullName>
    <description>SFI-669..</description>
    <label>Lower Range</label>
    <length>80</length>
    <type>Text</type>
</CustomField>