force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_MeasuringDocumentCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringDocumentCount__c</fullName>
    <description>Indicates the number of readings under this measuring point. 
Created as part of SFS-4870</description>
    <label>Measuring Document Count</label>
    <summaryForeignKey>FSM_MeasuringDocument__c.FSM_MeasuringPointReading__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>