force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_MeasuringPointNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPointNumber__c</fullName>
    <description>SFI-669</description>
    <label>Measuring Point Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>