force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_MeasuringPosition__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPosition__c</fullName>
    <description>SFI-669</description>
    <label>Measuring Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>