force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>FSM_UnitofMeasure__c</fullName>
    <description>SFI-669</description>
    <label>Unit of Measure</label>
    <length>80</length>
    <type>Text</type>
</CustomField>