force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_UpperRange__c.field-meta.xml
<CustomField>
    <fullName>FSM_UpperRange__c</fullName>
    <description>SFI-669</description>
    <label>Upper Range</label>
    <length>80</length>
    <type>Text</type>
</CustomField>