force-app/main/default/objects/FSM_MeasuringPoint__c/fields/FSM_ValCodeSufficient__c.field-meta.xml
<CustomField>
    <fullName>FSM_ValCodeSufficient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-669</description>
    <label>Val Code Sufficient</label>
    <type>Checkbox</type>
</CustomField>