force-app/main/default/objects/FSM_MeasuringPoint__c/validationRules/FSM_Decimal_Cannot_be_greater_than_15.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_Decimal_Cannot_be_greater_than_15</fullName>
    <active>true</active>
    <description>SFS-5421</description>
    <errorConditionFormula>FSM_Decimals__c  &gt; 15</errorConditionFormula>
    <errorDisplayField>FSM_Decimals__c</errorDisplayField>
    <errorMessage>The maximum supported number of decimals is 15</errorMessage>
</ValidationRule>